<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    style="?attr/fondo">

    <LinearLayout
        android:id="@+id/pref_layout_principal"
        style="?attr/fondo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:soundEffectsEnabled="true" >

        <ZoomControls
            android:id="@+id/pref_zoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top" />

        <TextView
            android:id="@+id/pref_not_titulo"
            style="?attr/titulo"
            android:contentDescription="@string/notificaciones_desc"
            android:text="@string/notificaciones" />

        <LinearLayout
            android:id="@+id/layoutVibracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="7dip" >

            <CheckBox
                android:id="@+id/pref_not_vib_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/notif_vibrador_check_desc"
                android:focusable="true"
                android:nextFocusLeft="@id/pref_not_vib_checkbox"
                android:nextFocusRight="@+id/pref_not_voz_checkbox"
                android:onClick="onClickVibracion" />

            <TextView
                android:id="@+id/pref_not_vib_titulo"
                style="?attr/subtitulo"
                android:contentDescription="@string/notif_vibrador_desc"
                android:gravity="left|center_vertical|fill_vertical"
                android:text="@string/notif_vibrador" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutVoz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="7dip" >

            <CheckBox
                android:id="@id/pref_not_voz_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/notif_voz_check_desc"
                android:focusable="true"
                android:nextFocusLeft="@id/pref_not_vib_checkbox"
                android:onClick="onClickVoz" />

            <TextView
                android:id="@+id/pref_not_voz_titulo"
                style="?attr/subtitulo"
                android:contentDescription="@string/notif_voz_desc"
                android:gravity="left|center_vertical|fill_vertical"
                android:text="@string/notif_voz"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <TextView
            android:id="@+id/pref_tema_titulo"
            style="?attr/titulo"
            android:contentDescription="@string/tema_desc"
            android:text="@string/tema" />

        <RadioGroup
            android:id="@+id/pref_tema_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="7dip" >

            <RadioButton
                android:id="@+id/pref_tema_1"
                style="?attr/opcion"
                android:contentDescription="@string/tema1_desc"
                android:focusable="true"
                android:nextFocusLeft="@id/pref_not_voz_checkbox"
                android:nextFocusRight="@+id/pref_tema_2"
                android:text="@string/tema1" />

            <RadioButton
                android:id="@id/pref_tema_2"
                style="?attr/opcion"
                android:contentDescription="@string/tema2_desc"
                android:focusable="true"
                android:nextFocusLeft="@id/pref_tema_1"
                android:nextFocusRight="@+id/pref_tema_3"
                android:text="@string/tema2" />

            <RadioButton
                android:id="@id/pref_tema_3"
                style="?attr/opcion"
                android:contentDescription="@string/tema3_desc"
                android:focusable="true"
                android:nextFocusLeft="@id/pref_tema_2"
                android:nextFocusRight="@id/pref_tema_3"
                android:text="@string/tema3" />
        </RadioGroup>
    </LinearLayout>

</ScrollView>